--- a/scss/layout/components/_marker&cluster.scss
+++ b/scss/layout/components/_marker&cluster.scss
@@ -1,6 +1,7 @@
 .cluster {
     // width: 6rem;
     // height: 6rem;
+    cursor: pointer;
     border-radius: 1rem;
     background-color: rgba($color-black, 1);
     box-shadow: 1px 1px 5px $color-blue;
